2003-01-05  Eric Bourque <ericb@computer.org>

 	* gtkmm.spec.in: added an unpackaged file (.devhelp) to the %files 
	section. 

2004-01-03  Murray Cumming  <murrayc@usa.net>

	* gdk/src/*.[hg|ccg]: Added class documentation, by copying it from the
	C documentation.
	* gdk/gdkmm/: Added rgb.[h|cc] with some global functions, wrapping
	gdk_rgb_get_colormap(), gdk_rgb_get_visual() and gdk_rgb_ditherable().
	* gdk/src/color.hg: Documented all methods, apart from the hsv and hsl 
	stuff that is a mystery to me.
	* gdk/src/colormap.hg: Added get_system() as a wrapper for 
	gdk_colormap_get_system().
	* gdk/src/device.hg: Added get_name(), get_source(), get_mode() and
	get_has_cursor() as accessors for read-only struct fields.
	* gdk/src/dragcontext.[hg|ccg]: Added get_targets() and documented it
	and other accessors.
	* gtk/src/liststore.hg, treestore.hg: Documented all methods.
	* gtk/src/tree*.hg: Added lots of class and method documentation.

2003-12-31  Murray Cumming  <murrayc@usa.net>

	* docs/reference/Makefile.am: Corrected generated .devhelp filename
	so that it matches the pattern that devhelp looks for.
	* docs/reference/doxygen_to_devhelp.xsl: Correct link prefix, so that
	it links to the installed html documentation.
	* gtk/gtkmm/accelmap.[h|cc]: Added lock_path() and unlock_path() as 
	wrappers for new GTK+ functions. Added documentation for all AccelMap
	methods, based on the GTK+ docs.
	* gtk/src/clipboard.[hg|ccg]: Added documentation, based on the C docs.
	Added wait_for_targets(), as a wrapper for 
	gtk_clipboard_wait_for_targets(). Added a version of request_targets()
	with a callback that takes a list of strings, as a wrapper for 
	gtk_clipboard_request_targets(), and deprecated the hacky one
	with a callback that takes a SelectionData.
	* atk/src/: Added Hyperlink, Hypertext, Document, and StreamableContent
	* atk/src/atkobject.hg: Now inherits from the Hypertext interfaces as
	well as the others.