@@ -22,6 +22,7 @@
 #include <glibmm/object.h>
 #include <gdkmm/visual.h>
 #include <gdkmm/colormap.h>
+#include <gdkmm/types.h> //For ByteOrder.
 #include <gdk/gdkimage.h>
 
 _DEFS(gdkmm,gdk)
@@ -68,6 +69,22 @@ public:
   _WRAP_METHOD(guint32 get_pixel(int	x, int	y) const, gdk_image_get_pixel)
   _WRAP_METHOD(void set_colormap(const Glib::RefPtr<Colormap>& colormap), gdk_image_set_colormap)
   _WRAP_METHOD(Glib::RefPtr<Colormap> get_colormap(), gdk_image_get_colormap, refreturn)
+  _WRAP_METHOD(Glib::RefPtr<const Colormap> get_colormap() const, gdk_image_get_colormap, refreturn)
+  
+  _MEMBER_GET(image_type, type, ImageType, GdkImageType)
+  _MEMBER_GET_GOBJECT(visual, visual, Visual, GdkVisual*)
+  _MEMBER_GET(byte_order, byte_order, ByteOrder, GdkByteOrder)
+  _MEMBER_GET(width, width, int, gint)
+  _MEMBER_GET(height, height, int, gint)
+  _MEMBER_GET(bpp, bpp, guint16, guint16)
+  _MEMBER_GET(bpl, bpl, guint16, guint16)
+  _MEMBER_GET(bits_per_pixel, bits_per_pixel, guint16, guint16)
+
+  //This memory block is not read-only, apparently:
+  _MEMBER_GET_PTR(mem, mem, void*, gpointer)
+
+  //TODO: This should be const really.
+  _MEMBER_GET(windowing_data, windowing_data, void*, gpointer)
 };
 
 } /* namespace Gdk */
