@@ -1,3 +1,7 @@
+2004-01-05  Murray Cumming  <murrayc@usa.net>
+
+	* gdk/src/image.hg: Added accessors for public struct fields.
+
 2003-01-05  Eric Bourque <ericb@computer.org>
 
  	* gtkmm.spec.in: added an unpackaged file (.devhelp) to the %files 
